tests/stable/misc/compile_fail/forward_failed_replace.stderr
error: cannot replace `b` in this path

  = note: `b` != `a`
  = help: try specifing a prefix of `a :: d :: foo` in the `forward` attribute

  --> $DIR/forward_failed_replace.rs:22:5
   |
22 |     a::d::foo();
   |     ^^^^^^^^^

error[E0574]: expected struct, variant or union type, found function `a::d::foo`
  --> $DIR/forward_failed_replace.rs:21:6
   |
21 |       #[assure("is foo", reason = "foo is always foo")]
   |  ______^
22 | |     a::d::foo();
   | |_____^ not a struct, variant or union type
   |
help: consider importing this struct instead
   |
1  | use crate::c::d::foo;
   |

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/forward_failed_replace.rs:22:5
   |
21 |       #[assure("is foo", reason = "foo is always foo")]
   |  ______-
22 | |     a::d::foo();
   | |     -^^^^^^^^
   | |     |
   | |_____expected 0 arguments
   |       supplied 1 argument
   |
note: function defined here
  --> $DIR/forward_failed_replace.rs:5:23
   |
5  |         pub(crate) fn foo() {}
   |                       ^^^
